--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
         width: 95% !important;
         font-size: 13px;
       }
-      /* کوچکتر کردن تیتر اصلی و دکمه‌های تب */
+    /* کوچکتر کردن تیتر اصلی و دکمه‌های تب */
       h1 {
         font-size: 22px;
       }
@@ -417,6 +417,53 @@
         padding: 8px 16px;
         font-size: 14px;
       }
+    }
+
+    /* ------------------- جدول حذفی (Bracket) ------------------- */
+    /* کانتینر کلی برای جدول حذفی والیبال */
+    .bracket {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 40px;
+      flex-wrap: wrap;
+      margin: 30px auto;
+      max-width: 100%;
+    }
+
+    /* هر ستون (راند) در جدول حذفی */
+    .bracket .round {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 24px;
+      position: relative;
+    }
+
+    /* هر مسابقه در جدول حذفی */
+    .bracket .match {
+      background: rgba(255, 255, 255, 0.6);
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      width: 180px;
+      padding: 10px;
+      text-align: center;
+      backdrop-filter: blur(6px);
+    }
+
+    /* تیم‌های هر مسابقه در جدول حذفی */
+    .bracket .match .team {
+      font-size: 14px;
+      font-weight: bold;
+      color: #3f51b5;
+      padding: 6px;
+      display: block;
+    }
+    /* خط جداکننده بین تیم‌ها */
+    .bracket .match .team + .team {
+      margin-top: 6px;
+      border-top: 1px solid #ddd;
     }
 
   </style>
@@ -439,6 +486,49 @@
   <!-- تب ۱: بازی‌های والیبال -->
   <div id="volleyballTab" class="tab-content active">
     <!-- چهار بخش مشابه فوتسال برای والیبال: بازی‌های آینده، نظرات، نتایج، بازیکنان مؤثر -->
+    <!-- جدول حذفی والیبال -->
+    <h2>🏐 جدول حذفی</h2>
+    <div id="volleyballBracket" class="bracket">
+      <!-- ستون‌های جدول حذفی به ترتیب: مرحله اول (چپ)، نیمه‌نهایی چپ، فینال، نیمه‌نهایی راست، مرحله اول راست -->
+      <div class="round" id="left-quarter">
+        <div class="match" id="lqf1">
+          <div class="team" id="lqf1-team1">-</div>
+          <div class="team" id="lqf1-team2">-</div>
+        </div>
+        <div class="match" id="lqf2">
+          <div class="team" id="lqf2-team1">-</div>
+          <div class="team" id="lqf2-team2">-</div>
+        </div>
+      </div>
+      <div class="round" id="left-semi">
+        <div class="match" id="lsf">
+          <div class="team" id="lsf-team1">-</div>
+          <div class="team" id="lsf-team2">-</div>
+        </div>
+      </div>
+      <div class="round" id="final">
+        <div class="match" id="final-match">
+          <div class="team" id="final-team1">-</div>
+          <div class="team" id="final-team2">-</div>
+        </div>
+      </div>
+      <div class="round" id="right-semi">
+        <div class="match" id="rsf">
+          <div class="team" id="rsf-team1">-</div>
+          <div class="team" id="rsf-team2">-</div>
+        </div>
+      </div>
+      <div class="round" id="right-quarter">
+        <div class="match" id="rqf1">
+          <div class="team" id="rqf1-team1">-</div>
+          <div class="team" id="rqf1-team2">-</div>
+        </div>
+        <div class="match" id="rqf2">
+          <div class="team" id="rqf2-team1">-</div>
+          <div class="team" id="rqf2-team2">-</div>
+        </div>
+      </div>
+    </div>
     <h2>📅 بازی‌های آینده</h2>
     <!-- بازی‌های آینده والیبال به‌صورت کارت‌ها نمایش داده می‌شوند -->
     <div id="volleyballMatches" class="card-container"></div>
@@ -610,6 +700,9 @@
   // لینک بخش بازیکنان مؤثر والیبال
   const volleyballEffectiveUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=1253015944&single=true&output=csv";
   const volleyballCommentsUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=537934344&single=true&output=csv";
+
+  // لینک شیت جدول حذفی والیبال (۸ تیم)
+  const volleyballBracketUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=279926721&single=true&output=csv";
 
   /*
    * از این پس اطلاعات داورها از همان شیت بازی‌های آینده خوانده می‌شود.
@@ -1113,6 +1206,38 @@
         buildCommentsSliderVolleyball(commentsData);
       });
   })();
+
+  /*
+   * جدول حذفی والیبال
+   * این بخش اطلاعات ۸ تیم را از شیت مربوط به جدول حذفی (knockout bracket) می‌خواند.
+   * چهار تیم اول در سمت چپ و چهار تیم بعدی در سمت راست قرار می‌گیرند.
+   * تیم‌ها دو به دو مسابقه می‌دهند و فعلاً نام تیم‌های نیمه‌نهایی و فینال به صورت پیش‌فرض نمایش داده می‌شود.
+   */
+  fetch(volleyballBracketUrl)
+    .then(res => res.text())
+    .then(csv => {
+      const rows = csv.trim().split("\n").map(r => r.split(","));
+      if (!rows.length) return;
+      const dataRows = rows.slice(1);
+      const teams = [];
+      dataRows.forEach(r => {
+        const t = (r[0] && r[0].trim()) || (r[1] && r[1].trim()) || "";
+        if (t) teams.push(t);
+      });
+      const leftTeams = teams.slice(0, 4);
+      const rightTeams = teams.slice(4, 8);
+      document.getElementById("lqf1-team1").textContent = leftTeams[0] || "-";
+      document.getElementById("lqf1-team2").textContent = leftTeams[1] || "-";
+      document.getElementById("lqf2-team1").textContent = leftTeams[2] || "-";
+      document.getElementById("lqf2-team2").textContent = leftTeams[3] || "-";
+      document.getElementById("rqf1-team1").textContent = rightTeams[0] || "-";
+      document.getElementById("rqf1-team2").textContent = rightTeams[1] || "-";
+      document.getElementById("rqf2-team1").textContent = rightTeams[2] || "-";
+      document.getElementById("rqf2-team2").textContent = rightTeams[3] || "-";
+    })
+    .catch(err => {
+      console.error("Error loading volleyball bracket:", err);
+    });
 
 </script>
 
