--- a/index.html
+++ b/index.html
@@ -468,12 +468,67 @@
     }
 
     /* متمایز کردن کارت فینال با رنگ و حاشیه طلایی */
-    .bracket #final .match {
-      border: 2px solid #f7c948;
-      background: rgba(255, 223, 85, 0.25);
+    /*
+     * کارت فینال با کلاس final-match به صورت ویژه طراحی می‌شود.
+     * از گرادیان شعاعی و سایه برای ایجاد ظاهری طلایی و انیمیشن پالس استفاده می‌شود.
+     */
+    .bracket .match.final-match {
+      border: 2px solid #f4b400;
+      background: radial-gradient(circle at top, #fff8e1, #ffe082);
+      box-shadow: 0 0 16px rgba(244, 180, 0, 0.7);
+      position: relative;
+      overflow: hidden;
+      animation: finalPulse 2.4s ease-in-out infinite;
+      transform: translateY(-4px);
     }
-    .bracket #final .match .team {
-      color: #d88a00;
+
+    /* نور نرم در بالا برای کارت فینال */
+    .bracket .match.final-match::before {
+      content: "";
+      position: absolute;
+      top: -40%;
+      left: -20%;
+      width: 140%;
+      height: 60%;
+      background: radial-gradient(circle, rgba(255, 255, 255, 0.9), transparent);
+      opacity: 0.7;
+    }
+
+    /* متن داخل کارت فینال */
+    .bracket .match.final-match .team {
+      font-size: 16px;
+      color: #b86d00;
+    }
+
+    /* انیمیشن پالس طلایی برای کارت فینال */
+    @keyframes finalPulse {
+      0% {
+        box-shadow: 0 0 10px rgba(244, 180, 0, 0.5);
+        transform: translateY(-4px) scale(1);
+      }
+      50% {
+        box-shadow: 0 0 28px rgba(244, 180, 0, 1);
+        transform: translateY(-4px) scale(1.03);
+      }
+      100% {
+        box-shadow: 0 0 10px rgba(244, 180, 0, 0.5);
+        transform: translateY(-4px) scale(1);
+      }
+    }
+
+    /* نمایش صحیح براکت روی موبایل */
+    @media (max-width: 768px) {
+      .bracket {
+        flex-wrap: nowrap;
+        overflow-x: auto;
+        padding-bottom: 15px;
+      }
+      .bracket .round {
+        min-width: 180px;
+      }
+      .bracket .match {
+        width: 160px;
+      }
     }
 
   </style>
@@ -517,7 +572,7 @@
         </div>
       </div>
       <div class="round" id="final">
-        <div class="match" id="final-match">
+        <div class="match final-match" id="final-match">
           <div class="team" id="final-team1">-</div>
           <div class="team" id="final-team2">-</div>
         </div>
